# Agent_Sudo

./: .gitignore  CHANGELOG.md  COMMIT_PLAN.md  CONTRIBUTING.md  Dockerfile  RC1_CHECKLIST.md  README.md  RELEASE_CHECKLIST.md  RELEASE_READINESS_REPORT.md  RELEASE_REPORT_V0_2_0.md  SECURITY.md  glama.json  pyproject.toml  server.json
.github/workflows/: autofix.yml  ci.yml  codeql.yml  publish.yml  release.yml
agent_sudo/: __init__.py  _locking.py  approvals.py  audit.py  audit_trace.py  branding.py  builders.py  classifier.py  context.py  delegations.py  doctor.py  evaluation.py  executors.py  gateway.py  helper.py  injection.py  inventory.py  mcp_gateway.py  mcp_server.py  mcp_validation.py  models.py  notifications.py  pending_approvals.py  policy.py  routing_check.py  run_context.py  self_identity.py  setup_guides.py  spec_helpers.py  topology.py  upgrade.py
agent_sudo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
agent_sudo/adapters/: claude_desktop.py  codex.py  common.py  (+4 more)
assets/: README.md
docs/: APPROVAL_UI_DESIGN.md  APPROVAL_UI_ROADMAP.md  ARCHITECTURE.md  CLAUDE_DESKTOP_SETUP.md  END_TO_END_DEMO.md  ENFORCEMENT_MODEL.md  FIRST_RUN.md  INSTALL_FOR_AGENTS.md  INTEGRATIONS.md  MCP_GATEWAY.md  MCP_SERVER_SETUP.md  PENDING_APPROVALS.md  REVIEW_RESPONSE.md  SECURITY_MODEL.md  TROUBLESHOOTING.md  UPGRADE.md  command_reference.md  evaluate_5_minutes.md  first_run.md  troubleshooting.md
examples/: README.md  claude_desktop_tool_call.json  codex_tool_call.json  demo_requests.json  generic_tool_call.json  hermes_tool_call.json  langgraph_integration.py  local.example.yaml  mcp_tool_call.json  provenance_external_content.json  provenance_user_direct.json  strict_policy.yaml
scripts/: agent-sudo-mcp  check_no_personal_data.py  validate_release.py
spec/: runtime_compatibility_levels.md  universal_schema.md
tests/: test_adapters.py  test_approval_hardening.py  test_approval_helper.py  test_audit_trace.py  test_audit_viewer.py  test_authorization_binding.py  test_branding.py  test_concurrency.py  test_context.py  test_delegations.py  test_doctor.py  test_end_to_end_delegation_flow.py  test_eval.py  test_example_pydantic_ai.py  test_executors.py  test_exfil_demo.py  test_failclosed_provenance.py  test_gateway.py  test_interactive_approvals.py  test_inventory.py  test_locking.py  test_mcp_gateway.py  test_mcp_integration_real.py  test_mcp_server.py  test_notifications.py  test_passphrase_reset.py  test_pending_approval_concurrency.py  test_pending_approvals.py  test_policy_path_rules.py  test_privacy_doctor.py  test_prompt_injection.py  test_provenance.py  test_provenance_consistency.py  test_routing_check.py  test_run_context.py  test_self_identity.py  test_setup_guides.py  test_shell_wrapper_credential_gaps.py  test_spec_helpers.py  test_taint_monotonicity.py  (+4 more)
(+85 files in other folders)
