[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sudo"
version = "0.4.0rc1"
description = "Local permission gateway for AI agent tool execution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "agent-sudo contributors"}]
dependencies = []

[project.scripts]
agent-sudo = "agent_sudo.gateway:main"
agent-sudo-mcp = "agent_sudo.mcp_server:main"

[tool.setuptools.packages.find]
include = ["agent_sudo*"]

[tool.setuptools.package-data]
agent_sudo = ["config/*.yaml", "examples/*.json"]
