[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sudo-mcp"
version = "0.4.1"
description = "Local permission gateway for AI agent tool execution"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "agent-sudo contributors"}]
dependencies = []
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-agents",
    "security",
    "zero-trust",
    "human-in-the-loop",
    "audit-logs",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.urls]
Homepage = "https://github.com/Kisyntra/Agent_Sudo"
Repository = "https://github.com/Kisyntra/Agent_Sudo.git"
"Bug Tracker" = "https://github.com/Kisyntra/Agent_Sudo/issues"
Documentation = "https://github.com/Kisyntra/Agent_Sudo#readme"

[project.scripts]
agent-sudo = "agent_sudo.gateway:main"
agent-sudo-mcp = "agent_sudo.mcp_server:main"

[tool.setuptools.packages.find]
include = ["agent_sudo*"]

[tool.setuptools.package-data]
agent_sudo = ["config/*.yaml", "examples/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
